--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="buttons=container">
             <button type="button" onclick="logIn()" id="login">LogIn</button>
             -
-            <button type="button" onclick="signIn()" id="signin">SignIn</button>
+            <button type="button" onclick="signUp()" id="signup">SignUp</button>
         </div>
         <span id="returnMsg"></span>
     </div>
